Merge GraalGet into Graal